<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="320.0dip" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="@color/text_white" android:text="@string/set_name" style="@style/SettingsLabel" />
        <EditText android:textSize="14.0sp" android:textColor="@color/text_primary" android:textColorHint="@color/text_secondary" android:id="@id/et_model_name" android:background="@drawable/bg_edit" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/set_name_hint" android:singleLine="true" />
        <TextView android:textColor="@color/text_white" android:paddingTop="8.0dip" android:text="@string/set_api_url" style="@style/SettingsLabel" />
        <EditText android:textSize="14.0sp" android:textColor="@color/text_primary" android:textColorHint="@color/text_secondary" android:id="@id/et_api_url" android:background="@drawable/bg_edit" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/set_api_url_hint" android:singleLine="true" android:inputType="textUri" />
        <TextView android:textColor="@color/text_white" android:paddingTop="8.0dip" android:text="@string/set_model_id" style="@style/SettingsLabel" />
        <EditText android:textSize="14.0sp" android:textColor="@color/text_primary" android:textColorHint="@color/text_secondary" android:id="@id/et_model_id" android:background="@drawable/bg_edit" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/set_model_id_hint" android:singleLine="true" />
        <TextView android:textColor="@color/text_white" android:paddingTop="8.0dip" android:text="@string/set_api_key" style="@style/SettingsLabel" />
        <EditText android:textSize="14.0sp" android:textColor="@color/text_primary" android:textColorHint="@color/text_secondary" android:id="@id/et_api_key" android:background="@drawable/bg_edit" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/set_api_key_hint" android:singleLine="true" android:inputType="textPassword" />
        <LinearLayout android:orientation="horizontal" android:paddingTop="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:paddingRight="6.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textColor="@color/text_white" android:text="@string/set_temperature" style="@style/SettingsLabel" />
                <EditText android:textSize="14.0sp" android:textColor="@color/text_primary" android:textColorHint="@color/text_secondary" android:id="@id/et_temperature" android:background="@drawable/bg_edit" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="0.7" android:singleLine="true" android:inputType="numberDecimal" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:paddingLeft="6.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textColor="@color/text_white" android:text="@string/set_max_tokens" style="@style/SettingsLabel" />
                <EditText android:textSize="14.0sp" android:textColor="@color/text_primary" android:textColorHint="@color/text_secondary" android:id="@id/et_max_tokens" android:background="@drawable/bg_edit" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="2048" android:singleLine="true" android:inputType="number" />
            </LinearLayout>
        </LinearLayout>
        <TextView android:textColor="@color/text_white" android:paddingTop="8.0dip" android:text="@string/set_system_prompt" style="@style/SettingsLabel" />
        <EditText android:textSize="14.0sp" android:textColor="@color/text_primary" android:textColorHint="@color/text_secondary" android:gravity="center|left|top" android:id="@id/et_system_prompt" android:background="@drawable/bg_edit" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/set_system_prompt_hint" android:maxLines="4" android:minLines="2" />
        <TextView android:textColor="@color/text_white" android:paddingTop="12.0dip" android:text="@string/set_thinking_mode" style="@style/SettingsLabel" />
        <RadioGroup android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/rg_thinking_mode" android:layout_width="fill_parent" android:layout_height="40.0dip">
            <RadioButton android:textSize="13.0sp" android:textColor="@color/text_white" android:ellipsize="end" android:id="@id/rb_think_default" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/set_think_default" android:singleLine="true" android:layout_weight="1.0" />
            <RadioButton android:textSize="13.0sp" android:textColor="@color/text_white" android:ellipsize="end" android:id="@id/rb_think_on" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/set_think_on" android:singleLine="true" android:layout_weight="1.0" />
            <RadioButton android:textSize="13.0sp" android:textColor="@color/text_white" android:ellipsize="end" android:id="@id/rb_think_off" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/set_think_off" android:singleLine="true" android:layout_weight="1.0" />
        </RadioGroup>
        <TextView android:textColor="@color/text_white" android:paddingTop="12.0dip" android:text="@string/set_multimodal" style="@style/SettingsLabel" />
        <CheckBox android:textSize="13.0sp" android:textColor="@color/text_white" android:id="@id/cb_multimodal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/set_multimodal_summary" />
        <TextView android:textColor="@color/text_white" android:paddingTop="12.0dip" android:text="@string/set_tool_calls" style="@style/SettingsLabel" />
        <CheckBox android:textSize="13.0sp" android:textColor="@color/text_white" android:id="@id/cb_tool_calls" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/set_tool_calls_summary" />
        <TextView android:textColor="@color/text_white" android:paddingTop="12.0dip" android:text="@string/set_model_optimize" style="@style/SettingsLabel" />
        <Button android:textSize="14.0sp" android:textColor="@color/text_primary" android:id="@id/btn_model_optimize" android:background="@android:drawable/btn_default" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/set_model_optimize_default" />
        <Button android:textSize="14.0sp" android:textColor="@color/text_primary" android:id="@id/btn_test_connection" android:background="@android:drawable/btn_default" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/set_test" />
        <TextView android:textSize="12.0sp" android:textColor="@color/text_primary" android:id="@id/tv_test_result" android:background="@drawable/bg_reasoning" android:padding="8.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:paddingTop="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textSize="14.0sp" android:textColor="@color/text_primary" android:id="@+id/btn_model_save" android:background="@android:drawable/btn_default" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="6.0dip" android:layout_weight="1.0" android:text="@string/set_save" />
            <Button android:textSize="14.0sp" android:textColor="@color/text_primary" android:id="@+id/btn_model_cancel" android:background="@android:drawable/btn_default" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_weight="1.0" android:text="@string/dlg_cancel" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>