<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="left" android:orientation="vertical" android:background="@drawable/bg_drawer" android:visibility="gone" android:layout_width="280.0dip" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@color/item_drawer_active" android:paddingLeft="12.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip">
        <TextView android:textSize="15.0sp" android:textStyle="bold" android:textColor="@color/text_drawer_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/drawer_title" android:singleLine="true" android:layout_weight="1.0" />
        <Button android:textSize="18.0sp" android:textColor="@color/text_drawer_title" android:id="@id/btn_drawer_close" android:background="@null" android:padding="0.0dip" android:layout_width="32.0dip" android:layout_height="32.0dip" android:text="×" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/btn_drawer_active_model" android:background="@drawable/item_drawer_action_selector" android:paddingLeft="12.0dip" android:paddingTop="10.0dip" android:paddingRight="12.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="13.0sp" android:textColor="@color/text_drawer_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/set_active_model" />
        <TextView android:textSize="14.0sp" android:textColor="@color/text_drawer_active" android:ellipsize="end" android:gravity="right" android:id="@id/tv_drawer_model" android:paddingLeft="6.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="1.0" />
    </LinearLayout>
    <View android:background="@drawable/divider_dark" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <ListView android:id="@id/list_conversations" android:layout_width="fill_parent" android:layout_height="fill_parent" android:listSelector="@drawable/item_drawer_selector" android:cacheColorHint="#00000000" android:divider="@drawable/divider_dark" android:dividerHeight="1.0dip" />
        <TextView android:textSize="13.0sp" android:textColor="@color/text_drawer_title" android:layout_gravity="center" android:id="@id/tv_drawer_empty" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/empty_conversations" />
    </FrameLayout>
    <View android:background="@drawable/divider_dark" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="13.0sp" android:textColor="@color/text_drawer_item" android:id="@id/btn_drawer_new" android:background="@drawable/item_drawer_action_selector" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/action_new" android:layout_weight="1.0" />
        <View android:background="@drawable/divider_dark" android:layout_width="1.0dip" android:layout_height="fill_parent" />
        <Button android:textSize="13.0sp" android:textColor="@color/text_drawer_item" android:id="@id/btn_drawer_clear" android:background="@drawable/item_drawer_action_selector" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/action_clear" android:layout_weight="1.0" />
        <View android:background="@drawable/divider_dark" android:layout_width="1.0dip" android:layout_height="fill_parent" />
        <Button android:textSize="13.0sp" android:textColor="@color/text_drawer_item" android:id="@id/btn_drawer_settings" android:background="@drawable/item_drawer_action_selector" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/action_settings" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>