<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_edit" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="6.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_model_name" android:layout_width="0.0dip" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="1.0" />
        <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/accent" android:id="@id/tv_model_active" android:paddingLeft="6.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView android:textSize="12.0sp" android:textColor="@color/text_secondary" android:ellipsize="end" android:id="@id/tv_model_id" android:paddingTop="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" />
    <TextView android:textSize="11.0sp" android:textColor="@color/text_secondary" android:ellipsize="end" android:id="@id/tv_model_url" android:paddingTop="1.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" />
    <LinearLayout android:orientation="horizontal" android:paddingTop="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="13.0sp" android:textColor="@color/text_primary" android:id="@id/btn_model_activate" android:background="@android:drawable/btn_default" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="4.0dip" android:text="@string/set_activate" android:layout_weight="1.0" />
        <Button android:textSize="13.0sp" android:textColor="@color/text_primary" android:id="@id/btn_model_edit" android:background="@android:drawable/btn_default" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" android:text="@string/set_edit_model" android:layout_weight="1.0" />
        <Button android:textSize="13.0sp" android:textColor="@color/error" android:id="@id/btn_model_delete" android:background="@android:drawable/btn_default" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:text="@string/set_delete" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>