<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@color/bg_main" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/bg_top_bar" android:layout_width="fill_parent" android:layout_height="44.0dip">
            <Button android:textSize="20.0sp" android:textColor="@color/text_white" android:id="@id/btn_open_drawer" android:background="@null" android:padding="0.0dip" android:layout_width="44.0dip" android:layout_height="44.0dip" android:text="≡" />
            <TextView android:id="@id/tv_title" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" style="@style/TopBarText" />
            <TextView android:textSize="12.0sp" android:textColor="@color/text_drawer_title" android:ellipsize="end" android:id="@id/tv_model_name" android:paddingLeft="4.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="100.0dip" android:singleLine="true" />
            <Button android:textSize="22.0sp" android:textColor="@color/text_white" android:id="@id/btn_new_chat" android:background="@null" android:padding="0.0dip" android:layout_width="44.0dip" android:layout_height="44.0dip" android:text="+" />
        </LinearLayout>
        <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <ListView android:id="@id/list_messages" android:layout_width="fill_parent" android:layout_height="fill_parent" android:stackFromBottom="true" android:scrollingCache="true" android:transcriptMode="normal" android:cacheColorHint="#00000000" android:divider="@null" android:dividerHeight="0.0dip" android:smoothScrollbar="true" />
            <TextView android:textSize="14.0sp" android:textColor="@color/text_secondary" android:layout_gravity="center" android:id="@id/tv_empty" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/empty_chat" />
        </FrameLayout>
        <LinearLayout android:orientation="vertical" android:background="@color/bg_input" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/layout_image_labels" android:paddingLeft="14.0dip" android:paddingTop="4.0dip" android:paddingRight="14.0dip" android:paddingBottom="2.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="13.0sp" android:textColor="#ff2196f3" android:id="@id/tv_image_label_1" android:paddingRight="8.0dip" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <TextView android:textSize="13.0sp" android:textColor="#ff2196f3" android:id="@id/tv_image_label_2" android:paddingRight="8.0dip" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <TextView android:textSize="13.0sp" android:textColor="#ff2196f3" android:id="@id/tv_image_label_3" android:paddingRight="8.0dip" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:padding="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <EditText android:textSize="15.0sp" android:textColor="@color/text_primary" android:textColorHint="@color/text_secondary" android:gravity="center|left|top" android:id="@id/et_input" android:background="@drawable/bg_input" android:paddingLeft="8.0dip" android:paddingTop="6.0dip" android:paddingRight="8.0dip" android:paddingBottom="6.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:minHeight="38.0dip" android:hint="@string/hint_input" android:maxLines="4" android:layout_weight="1.0" />
                <Button android:textSize="15.0sp" android:textColor="@color/text_white" android:id="@id/btn_attach_image" android:background="@drawable/bg_attach_gray" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="38.0dip" android:layout_marginLeft="6.0dip" android:minWidth="48.0dip" android:text="@string/btn_image" />
                <Button android:textSize="15.0sp" android:textColor="@color/text_white" android:id="@id/btn_send" android:background="@drawable/bg_send" android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:layout_width="wrap_content" android:layout_height="38.0dip" android:layout_marginLeft="6.0dip" android:minWidth="56.0dip" android:text="@string/btn_send" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <View android:id="@id/mask" android:background="#80000000" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <include android:layout_gravity="left" android:id="@id/drawer" android:layout_width="280.0dip" android:layout_height="fill_parent" layout="@layout/drawer_conversations" />
</FrameLayout>